--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+  <link rel="icon" href="favicon.png" type="image/png">
   <meta charset="UTF-8" />
   <title>معرض دمى الفرو</title>
+  <meta property="og:title" content="معرض دمى الفرو">
+<meta property="og:description" content="موقعك الشخصي لتصنيف دمى الفرو المحببة!">
+<meta property="og:image" content="https://samer7667.github.io/dolls-website/preview.jpg">
+<meta property="og:url" content="https://samer7667.github.io/dolls-website/">
+<meta name="twitter:card" content="summary_large_image">
+
+
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; }
     .header { text-align: center; padding: 20px; }
