--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <link rel="icon" href="favicon.png" type="image/png" />
 
 <!-- وسوم Open Graph للسوشال ميديا -->
-<meta property="og:title" content="معرض دمى الفرو | Plush Toy Gallery | Galería de Peluches" />
-<meta property="og:description" content="احفظ دمى الفرو الخاصة بك وتعرّف عليها بسهولة! | Save and organize your plush toys! | ¡Guarda y organiza tus peluches favoritos!" />
+<meta property="og:title" content="Plush Toy Gallery" />
+<meta property="og:description" content="Save and organize your plush toys!" />
 <meta property="og:image" content="https://samer7667.github.io/dolls-website/preview.jpg" />
 <meta property="og:url" content="https://samer7667.github.io/dolls-website/" />
 <meta property="og:type" content="website" />
 
 <!-- وسوم تويتر -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="معرض دمى الفرو | Plush Toy Gallery | Galería de Peluches" />
-<meta name="twitter:description" content="احفظ دمى الفرو الخاصة بك وتعرّف عليها بسهولة! | Save and organize your plush toys! | ¡Guarda y organiza tus peluches favoritos!" />
+<meta name="twitter:title" content="Plush Toy Gallery" />
+<meta name="twitter:description" content="Save and organize your plush toys!" />
 <meta name="twitter:image" content="https://samer7667.github.io/dolls-website/preview.jpg" />
 
 
