--- a/index.html
+++ b/index.html
@@ -1,67 +1,9 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plush Toy Gallery</title>
-  <!-- أيقونة الموقع -->
-<link rel="icon" href="favicon.png" type="image/png" />
-
-<!-- وسوم Open Graph للسوشال ميديا -->
-<meta property="og:title" content="Plush Toy Gallery" />
-<meta property="og:description" content="Save and organize your plush toys!" />
-<meta property="og:image" content="https://samer7667.github.io/dolls-website/preview.jpg" />
-<meta property="og:url" content="https://samer7667.github.io/dolls-website/" />
-<meta property="og:type" content="website" />
-
-<!-- وسوم تويتر -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Plush Toy Gallery" />
-<meta name="twitter:description" content="Save and organize your plush toys!" />
-<meta name="twitter:image" content="https://samer7667.github.io/dolls-website/preview.jpg" />
-
-
+  <title>معرض دمى الفرو</title>
   <style>
-    @media (max-width: 600px) {
-  .doll-card {
-    width: 95%;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    align-items: flex-start;
-    padding: 10px;
-  }
-
-  .doll-card img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    flex-shrink: 0;
-    border-radius: 6px;
-  }
-
-  .doll-card h3, .doll-card p {
-    font-size: 14px;
-    margin: 2px 0;
-  }
-
-  .doll-card button {
-    font-size: 12px;
-    margin: 2px 4px;
-  }
-
-  .form-container input, .form-container textarea {
-    font-size: 14px;
-    padding: 8px;
-  }
-
-  .logo-img, .square-img {
-    width: 100px;
-    height: 100px;
-  }
-}
-
     body { font-family: Arial, sans-serif; background: #f9f9f9; }
     .header { text-align: center; padding: 20px; }
     .form-container { max-width: 500px; margin: auto; background: #fff; padding: 20px; border-radius: 8px; }
@@ -115,15 +57,6 @@
     width: 90%;
   }
 }
-#curtain {
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-#curtain.active {
-  display: flex;
-}
 
   </style>
 </head>
@@ -162,16 +95,8 @@ background: rgba(0,0,0,0.6); justify-content: center; align-items: center; z-ind
   <input type="number" id="year" placeholder="سنة الإصدار" />
   <textarea id="poem" placeholder="القصيدة"></textarea>
   <input type="file" id="image" accept="image/*" />
-  <img id="previewImage" style="max-height: 100px; display: none; margin-top: 10px;" />
   <button onclick="addDoll()" id="addBtn">إضافة</button>
-
 </div>
-<input type="text" id="searchBar" 
-  placeholder="🔍" 
-  oninput="searchDolls()" 
-  style="width: 90%; padding: 10px; margin: 20px auto; display: block; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" />
-  oninput="searchDolls()" 
-  style="width: 90%; padding: 10px; margin: 20px auto; display: block; font-size: 16px; border-radius: 6px; border: 1px solid #ccc;" />
 
 <div class="doll-list" id="dollList"></div>
 
@@ -276,13 +201,7 @@ importError: {
   ar: "❌ حدث خطأ أثناء قراءة الملف.",
   en: "❌ An error occurred while reading the file.",
   es: "❌ Ocurrió un error al leer el archivo."
-},
-searchPlaceholder: {
-  ar: "🔍 ابحث عن دمية...",
-  en: "🔍 Search for a doll...",
-  es: "🔍 Buscar una muñeca..."
-},
-
+}
 
 
 
@@ -301,7 +220,6 @@ function updateUI() {
   document.getElementById('year').placeholder = translationsUI.year[language];
   document.getElementById('poem').placeholder = translationsUI.poem[language];
   document.getElementById('addBtn').textContent = translationsUI.addBtn[language];
-  
   document.body.dir = (language === 'ar') ? 'rtl' : 'ltr';
   document.documentElement.lang = language;
   document.getElementById('clearAllBtn').innerHTML = `🗑️ ${translationsUI.clearAllBtn[language]}`;
@@ -309,26 +227,13 @@ function updateUI() {
 document.getElementById('importBtn').innerHTML = `📥 ${translationsUI.importBtn[language]}`;
 document.getElementById('advancedOptionsBtn').textContent = `⚙️ ${translationsUI.advancedOptionsBtn[language]}`;
 document.getElementById('advancedTitle').textContent = translationsUI.advancedCurtainTitle[language];
-document.getElementById('searchBar').placeholder = translationsUI.searchPlaceholder[language];
 
 }
 
 document.getElementById('language').addEventListener('change', function () {
   language = this.value;
   updateUI();
-const urlParams = new URLSearchParams(window.location.search);
-const sharedData = urlParams.get('view');
-if (sharedData) {
-  try {
-    const decoded = atob(decodeURIComponent(sharedData));
-    const dolls = JSON.parse(decoded);
-    displaySharedDolls(dolls);
-  } catch (e) {
-    alert("❌ الرابط غير صالح أو البيانات تالفة.");
-  }
-} else {
   displayDolls();
-}
 });
 
 function addDoll() {
@@ -377,29 +282,6 @@ function addDoll() {
     saveDoll(oldImage);
   }
 }
-function displaySharedDolls(dollsArray) {
-  const list = document.getElementById("doll-list");
-  list.innerHTML = "";
-
-  dollsArray.forEach(doll => {
-    const card = document.createElement("div");
-    card.className = "doll-card";
-    card.innerHTML = `
-      <img src="${doll.image}" class="doll-img" />
-      <h3>${doll.name}</h3>
-      <p>${doll.description}</p>
-      <p>${doll.birthday}</p>
-    `;
-    list.appendChild(card);
-  });
-
-  // إخفاء أدوات التعديل
-  const form = document.getElementById("form");
-  if (form) form.style.display = "none";
-
-  const controls = document.getElementById("controls");
-  if (controls) controls.style.display = "none";
-}
 
 function displayDolls() {
   const dolls = JSON.parse(localStorage.getItem('dolls') || '[]');
@@ -442,7 +324,6 @@ function deleteDoll(index) {
 function editDoll(index) {
   const dolls = JSON.parse(localStorage.getItem('dolls') || '[]');
   const doll = dolls[index];
-
 
   document.getElementById('name').value = doll.name;
   document.getElementById('birthday').value = doll.birthday;
@@ -500,9 +381,7 @@ updateUI();
 displayDolls();
 function toggleCurtain() {
   const curtain = document.getElementById("curtain");
-  document.getElementById("previewImage").src = doll.image;
-document.getElementById("previewImage").style.display = "block";
-curtain.classList.toggle('active');
+  curtain.style.display = (curtain.style.display === "none") ? "flex" : "none";
 }
 function triggerExampleUpload() {
   document.getElementById('exampleImageInput').click();
@@ -517,36 +396,6 @@ function changeExampleImage(event) {
     document.getElementById('exampleImage').src = e.target.result;
   };
   reader.readAsDataURL(file);
-}
-
-
-function searchDolls() {
-  const query = document.getElementById('searchBar').value.toLowerCase();
-  const dolls = JSON.parse(localStorage.getItem('dolls') || '[]');
-  const filtered = dolls.filter(doll => doll.name.toLowerCase().includes(query));
-  displayFilteredDolls(filtered);
-}
-
-function displayFilteredDolls(filteredDolls) {
-  const list = document.getElementById('dollList');
-  list.innerHTML = '';
-
-  filteredDolls.forEach((doll, index) => {
-    const card = document.createElement('div');
-    card.className = 'doll-card';
-    card.innerHTML = `
-      <img src="${doll.image}">
-      <div>
-        <h3>${doll.name}</h3>
-        <p><strong>${translate('Birthday')}:</strong> ${doll.birthday}</p>
-        <p><strong>${translate('Year')}:</strong> ${doll.year}</p>
-        <p>${doll.poem}</p>
-        <button onclick="deleteDoll(${index})">🗑️ ${translationsUI.deleteBtn[language]}</button>
-        <button onclick="editDoll(${index})">✏️ ${translationsUI.editBtn[language]}</button>
-      </div>
-    `;
-    list.appendChild(card);
-  });
 }
 
 
