--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
+  <!-- Website Icon (Favicon) -->
+<link rel="icon" href="tydools.jpg" type="image/jpeg">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn preview) -->
+<meta property="og:image" content="https://samer7667.github.io/dolls-website/tydools.jpg">
+<meta property="og:title" content="Plush Doll Gallery">
+<meta property="og:description" content="Save and organize your furry toys!">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://samer7667.github.io/dolls-website/">
+
+<!-- Twitter Card preview -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Plush Doll Gallery">
+<meta name="twitter:description" content="Save and organize your furry toys!">
+<meta name="twitter:image" content="https://samer7667.github.io/dolls-website/tydools.jpg">
+
   <title>معرض دمى الفرو</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; }
